# ParallelImageSegmentation

./: .gitignore  CMakeLists.txt  README.md  executable.sh  mpikmeansParallel.txt  mpikmeansSerial.txt
Code/MPI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  executable.sh  mpikmeans  mpikmeans.cpp
Code/Serial/: CMakeCache.txt  CMakeLists.txt  Makefile  applyWatershed.cpp  cmake_install.cmake  createImageRegions.cpp  imageSegmentation.cpp  jpgBytes.txt  kMeans.hpp  kmeans  kmeans.cpp  ompKMeans.cpp  overlap.hpp  sobel.cpp  sobel.hpp
Code/UPCXX/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  overlap.hpp  sobel.hpp  upcxxKmeans  upcxxkmeans.cpp
Samples/: canny.cpp  coloredRegion.cpp  kmeans.cpp  sampleUpcPthreadCombo.cpp
output/: mpikmeansParallel.txt  mpikmeansSerial.txt  serialkmeans.txt  upcxxkmeansParallel.txt
