find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
find_package(MPI REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
include_directories( ${MPI_INCLUDE_PATH})
add_executable( mpikmeans mpikmeans.cpp)
target_link_libraries( mpikmeans PUBLIC ${OpenCV_LIBS} OpenMP::OpenMP_CXX MPI::MPI_CXX)