find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
find_package(MPI REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
include_directories( ${MPI_INCLUDE_PATH})
add_executable( mpikmeans mpikmeans.cpp)
set_target_properties(mpikmeans PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executables)
target_link_libraries( mpikmeans PUBLIC ${OpenCV_LIBS} OpenMP::OpenMP_CXX MPI::MPI_CXX)