find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable( serialkmeans imageSegmentation.cpp)
set_target_properties(serialkmeans PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executables)
target_link_libraries( serialkmeans ${OpenCV_LIBS} OpenMP::OpenMP_CXX)