set(CMAKE_INSTALL_PREFIX /home/605/rossma/KmeansProject/opencv_install)
find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
set(BUILD_SHARED_LIBS OFF)
set(OpenCV_STATIC ON)
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable( serialkmeans imageSegmentation.cpp)
set_target_properties(serialkmeans PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executables)
target_link_libraries( serialkmeans PUBLIC ${OpenCV_LIBS} "-static" OpenMP::OpenMP_CXX)