list(APPEND CMAKE_PREFIX_PATH "~/upcxx/install/share/cmake/UPCXX")
find_package(OpenCV REQUIRED)
find_package(UPCXX REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable( upcxxkmeans upcxxkmeans.cpp)
set_target_properties(upcxxkmeans PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executables)
target_link_libraries( upcxxkmeans ${OpenCV_LIBS} ${UPCXX_LIBRARIES})