set(CMAKE_INSTALL_PREFIX /home/605/rossma/KmeansProject/opencv_install)
find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
find_package(UPCXX REQUIRED)
set(OpenCV_STATIC ON)
set(BUILD_SHARED_LIBS OFF)
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable( upcxxkmeans upcxxkmeans.cpp)
set_target_properties(upcxxkmeans PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/executables)
target_link_libraries( upcxxkmeans PUBLIC ${OpenCV_LIBS} "-static" ${UPCXX_LIBRARIES} OpenMP::OpenMP_CXX)